# agent-eval-contract

./: .gitignore  .pre-cr.json  .quality-runner.toml  AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  RELEASE.md  SECURITY.md  pyproject.toml
.agents/context/: README.md
.github/workflows/: ci.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-qr-remediation-agent-eval-contract/: 01-01-PLAN.md  01-CONTEXT.md
.tracker/: PROJECT_TRUTH.md
agent_eval_contract/: __init__.py  clean_room.py  cli.py  external.py  fixture_runner.py  models.py  release.py  release_metadata.json  samples.py  schema_export.py  schemas.py  templates.py  validators.py
agent_eval_contract/samples/: eval_failure.json  eval_run.json  eval_score.json  eval_task.json  external_result_normalization.json  shadow_candidate.json
docs/: adapters.md  contract.md  field-reference.md  release-checklist.md  stability.md  writing-adapters.md
examples/: README.md  eval_run.json  swe_bench_result.json  terminal_bench_result.json
examples/ci_pytest_eval/: emit_eval_run.py  eval_task.json  validate_eval_artifacts.sh
examples/dashboard_ingest/: export_schemas.py  validate_before_upload.py
examples/swe_bench_normalization/: normalize.py  swe_bench_result.json
scripts/: pre_cr_coverage.py
tests/: test_agent_eval_contract.py  test_backward_compatibility.py  test_cli_ergonomics.py  test_schema_snapshots.py
tests/fixtures/v0_2_0/: eval_failure.json  eval_run.json  eval_score.json  eval_task.json  normalized_run.json
tests/snapshots/: required_fields_v0_1.json
tests/snapshots/schemas/: eval_failure.schema.json  eval_run.schema.json  eval_score.schema.json  eval_task.schema.json  external_result.schema.json  fixture_bundle_manifest.schema.json  normalized_run.schema.json
