[project]
name = "agent-eval-contract"
version = "0.2.0"
description = "Pydantic contracts and JSON Schemas for portable agent evaluation records."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Jakye Amos" },
]
keywords = [
    "agents",
    "ai-evaluation",
    "evals",
    "harness",
    "json-schema",
    "pydantic",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2,<3",
]

[project.urls]
Homepage = "https://github.com/jakyeamos/agent-eval-contract"
Repository = "https://github.com/jakyeamos/agent-eval-contract"
Issues = "https://github.com/jakyeamos/agent-eval-contract/issues"

[project.scripts]
agent-eval-contract = "agent_eval_contract.cli:main"
agent-eval-contract-fixtures = "agent_eval_contract.fixture_runner:main"

[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
agent_eval_contract = ["py.typed", "release_metadata.json", "samples/*.json"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]

[tool.basedpyright]
pythonVersion = "3.12"
include = ["agent_eval_contract", "scripts", "tests"]
typeCheckingMode = "standard"
reportMissingImports = "warning"
reportMissingModuleSource = "none"

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
